--- a/savory/index.html
+++ b/savory/index.html
@@ -376,7 +376,7 @@
 					<div class="gtco-widget">
 						<h3>Contatti</h3>
 						<ul class="gtco-quick-contact">
-							<li><i class="icon-phone"></i> 080 975 3266</li>
+							<li><i class="icon-phone"></i> 080 975 3266 prova</li>
 							<br>
 							<li><i class="icon-mail2"></i><a href="mailto:rockcaffe.bari@gmail.com?subject=Feedback">rockcaffe.bari@gmail.com</a></li>
 						</ul>
