--- a/savory/services.html
+++ b/savory/services.html
@@ -88,7 +88,6 @@
 							</ul>
 						</li>
 						<li><a href="contact.html">Contact</a></li>
-						<li class="btn-cta"><a href="#"><span>Reservation</span></a></li>
 					</ul>	
 				</div>
 			</div>
@@ -236,30 +235,25 @@
 				
 				<div class="col-md-12 text-center">
 					<div class="gtco-widget">
-						<h3>Get In Touch</h3>
+						<h3>Contatti</h3>
 						<ul class="gtco-quick-contact">
-							<li><a href="#"><i class="icon-phone"></i> +1 234 567 890</a></li>
-							<li><a href="#"><i class="icon-mail2"></i> info@GetTemplates.co</a></li>
-							<li><a href="#"><i class="icon-chat"></i> Live Chat</a></li>
+							<li><i class="icon-phone"></i> 080 975 3266</li>
+							<br>
+							<li><i class="icon-mail2"></i><a href="mailto:rockcaffe.bari@gmail.com?subject=Feedback">rockcaffe.bari@gmail.com</a></li>
 						</ul>
 					</div>
 					<div class="gtco-widget">
-						<h3>Get Social</h3>
+						<h3>Social</h3>
 						<ul class="gtco-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="http://www.facebook.it/RockCaffeBari"><i class="icon-facebook"></i></a></li>
 						</ul>
 					</div>
 				</div>
 
-				<div class="col-md-12 text-center copyright">
+				<!-- COPIRIGHT <div class="col-md-12 text-center copyright">
 					<p><small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
 						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small></p>
-				</div>
-
-			</div>
+				</div> -->
 
 			
 
