--- a/savory/contact.html
+++ b/savory/contact.html
@@ -122,11 +122,12 @@
 				<div class="col-md-12">
 					<div class="col-md-6 animate-box">
 					<h3>Get In Touch</h3>
-					<form action="#">
+
+					<form method="POST" action="mailto:francesco.dipietro1109@gmail.com" enctype="text/plain">
 						<div class="row form-group">
 							<div class="col-md-12">
-								<label class="sr-only" for="name">Name</label>
-								<input type="text" id="name" class="form-control" placeholder="Your firstname">
+								<label class="sr-only" for="subject">Subject</label>
+								<input type="text" id="subject" class="form-control" placeholder="Your subject">
 							</div>
 							
 						</div>
@@ -140,7 +141,7 @@
 						<div class="row form-group">
 							<div class="col-md-12">
 								<label class="sr-only" for="message">Message</label>
-								<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Write us something"></textarea>
+								<textarea id="message" cols="30" rows="10" class="form-control" placeholder="Write us something"></textarea>
 							</div>
 						</div>
 						<div class="form-group">
@@ -148,6 +149,7 @@
 						</div>
 
 					</form>		
+
 				</div>
 				<div class="col-md-5 col-md-push-1 animate-box">
 					
@@ -156,7 +158,7 @@
 						<ul>
 							<li class="address">Via Giuseppe Re David, 197 <br> Bari</li>
 							<li class="phone">080 975 3266</li>
-							<li class="email"><a href="mailto:rockcaffe.bari@gmail.com?subject=Feedback">rockcaffe.bari@gmail.com</a></li>
+							<li class="email"><a href="mailto:rockcaffe.bari@gmail.com?subject=Feedback?">rockcaffe.bari@gmail.com</a></li>
 							<li class="url"><a href="http://www.facebook.it/RockCaffeBari">ROCK CAFF&Egrave;</a></li>
 						</ul>
 					</div>
