--- a/savory/services.html
+++ b/savory/services.html
@@ -80,14 +80,14 @@
 					<ul>
 						<li><a href="menu.html">Menu</a></li>
 						<li class="has-dropdown active">
-							<a href="services.html">Services</a>
+							<a href="services.html">Servizi</a>
 							<ul class="dropdown">
 								<li><a href="#">Food Catering</a></li>
 								<li><a href="#">Wedding Celebration</a></li>
 								<li><a href="#">Birthday's Celebration</a></li>
 							</ul>
 						</li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="contact.html">Contatti</a></li>
 					</ul>	
 				</div>
 			</div>
@@ -104,7 +104,7 @@
 
 					<div class="row row-mt-15em">
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-							<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>
+							<!--<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>-->
 							<h1 class="cursive-font">It's our pleasure to serve!</h1>	
 						</div>
 						
