--- a/savory/index.html
+++ b/savory/index.html
@@ -118,9 +118,9 @@
 											<form action="#">
 												<div class="row form-group">
 													<div class="col-md-12">
-														<label for="activities">Persons</label>
+														<label for="activities">Persone</label>
 														<select name="#" id="activities" class="form-control">
-															<option value="">Persons</option>
+															<option value="">Persone</option>
 															<option value="">1</option>
 															<option value="">2</option>
 															<option value="">3</option>
@@ -293,7 +293,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="ti-truck"></i>
+							<i class="smoking"></i><!-- inserire icona sigaretta-->
 						</span>
 						<h3>Food Delivery</h3>
 						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
