--- a/savory/services.html
+++ b/savory/services.html
@@ -105,7 +105,7 @@
 					<div class="row row-mt-15em">
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
 							<!--<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>-->
-							<h1 class="cursive-font">It's our pleasure to serve!</h1>	
+							<h1 class="cursive-font">Nostri Servizi!</h1>	
 						</div>
 						
 					</div>
@@ -122,8 +122,8 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2 class="cursive-font">Our Services</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2 class="cursive-font">Nostri Servizi</h2>
+					<p></p>
 				</div>
 			</div>
 			<div class="row">
@@ -198,7 +198,7 @@
 			</div>
 		</div>
 	</div>
-
+<!--
 	<div id="gtco-subscribe">
 		<div class="gtco-container">
 			<div class="row animate-box">
@@ -224,7 +224,7 @@
 			</div>
 		</div>
 	</div>
-
+-->
 	<footer id="gtco-footer" role="contentinfo" style="background-image: url(images/img_bg_1.jpg)" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="gtco-container">
