--- a/savory/contact.html
+++ b/savory/contact.html
@@ -104,7 +104,7 @@
 					<div class="row row-mt-15em">
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
 							<!--<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>-->
-							<h1 class="cursive-font">Say hello!</h1>	
+							<h1 class="cursive-font">Vieni a Trovarci!</h1>	
 						</div>
 						
 					</div>
