--- a/savory/index.html
+++ b/savory/index.html
@@ -267,8 +267,8 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2 class="cursive-font">Our Services</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2 class="cursive-font">Nostri Servizi</h2>
+					<p></p>
 				</div>
 			</div>
 			<div class="row">
@@ -277,8 +277,8 @@
 						<span class="icon">
 							<i class="ti-face-smile"></i>
 						</span>
-						<h3>Happy People</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<h3>Gente Felica</h3>
+						<p></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6">
@@ -286,17 +286,17 @@
 						<span class="icon">
 							<i class="ti-thought"></i>
 						</span>
-						<h3>Creative Culinary</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<h3>Cucina creativa</h3>
+						<p></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="smoking"></i><!-- inserire icona sigaretta-->
+							<i class="ti-smoking"></i><!-- inserire icona sigaretta-->
 						</span>
-						<h3>Food Delivery</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<h3>Zona fumatori</h3>
+						<p></p>
 					</div>
 				</div>
 				
