--- a/savory/index.html
+++ b/savory/index.html
@@ -78,14 +78,14 @@
 					<ul>
 						<li><a href="menu.html">Menu</a></li>
 						<li class="has-dropdown">
-							<a href="services.html">Servizi</a>
+							<a href="services.html">Services</a>
 							<ul class="dropdown">
 								<li><a href="#">Food Catering</a></li>
 								<li><a href="#">Wedding Celebration</a></li>
 								<li><a href="#">Birthday's Celebration</a></li>
 							</ul>
 						</li>
-						<li><a href="contact.html">Contatti</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>	
 				</div>
 			</div>
@@ -114,7 +114,7 @@
 									
 									<div class="tab-content">
 										<div class="tab-content-inner active" data-content="signup">
-											<h3 class="cursive-font">Prenotazioni</h3>
+											<h3 class="cursive-font">Table Reservation</h3>
 											<form action="#">
 												<div class="row form-group">
 													<div class="col-md-12">
@@ -131,13 +131,13 @@
 												</div>
 												<div class="row form-group">
 													<div class="col-md-12">
-														<label for="date-start">Data</label>
+														<label for="date-start">Date</label>
 														<input type="text" id="date" class="form-control">
 													</div>
 												</div>
 												<div class="row form-group">
 													<div class="col-md-12">
-														<label for="date-start">Ora</label>
+														<label for="date-start">Time</label>
 														<input type="text" id="time" class="form-control">
 													</div>
 												</div>
