--- a/savory/contact.html
+++ b/savory/contact.html
@@ -87,11 +87,8 @@
 								<li><a href="attività3.html">Attività3</a></li>
 							</ul>
 						</li>
-<<<<<<< HEAD
 						<li><a href="contact.html">Contatti</a></li>
-=======
-						<li class="active"><a href="contact.html">Contatti</a></li>
->>>>>>> 4cbeaf5bb9f453336f0bf435a9771bcbcda5fe8a
+
 					</ul>	
 				</div>
 			</div>
@@ -107,21 +104,9 @@
 
 					<div class="row row-mt-15em">
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-<<<<<<< HEAD
-<<<<<<< HEAD
+
 							<h1 class="cursive-font">Resta in contatto con noi!</h1>	
-=======
-							<!--<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>-->
-							<h1 class="cursive-font">Say hello!</h1>	
->>>>>>> 4cbeaf5bb9f453336f0bf435a9771bcbcda5fe8a
-=======
-							<!--<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>-->
-							<h1 class="cursive-font">Vieni a Trovarci!</h1>	
-=======
-							<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>
-							<h1 class="cursive-font">Say hello!</h1>	
->>>>>>> parent of 4cbeaf5... traduzione e aggiungata menu
->>>>>>> 12a13a26c7fb68c03fc31e4ec0b95a9cd02cb5a0
+
 						</div>
 						
 					</div>
@@ -248,10 +233,10 @@
 		<div class="gtco-container">
 			<div class="row row-pb-md">
 
-	<!-- COPIRIGHT <div class="col-md-12 text-center copyright">
+	<div class="col-md-12 text-center copyright">
 					<p><small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
 						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small></p>
-				</div> -->
+				</div>
 
 			</div>
 
