--- a/savory/index.html
+++ b/savory/index.html
@@ -120,21 +120,13 @@
 													<div class="col-md-12">
 														<label for="activities">Persone</label>
 														<select name="#" id="activities" class="form-control">
-<<<<<<< HEAD
 															<option style="background: rgb(38,33,31);" value="">Persone</option>
 															<option style="background: rgb(38,33,31);" value="">1</option>
 															<option style="background: rgb(38,33,31);" value="">2</option>
 															<option style="background: rgb(38,33,31);" value="">3</option>
 															<option style="background: rgb(38,33,31);" value="">4</option>
 															<option style="background: rgb(38,33,31);" value="">5+</option>
-=======
-															<option value="">Persone</option>
-															<option value="">1</option>
-															<option value="">2</option>
-															<option value="">3</option>
-															<option value="">4</option>
-															<option value="">5+</option>
->>>>>>> 12a13a26c7fb68c03fc31e4ec0b95a9cd02cb5a0
+
 														</select>
 													</div>
 												</div>
@@ -397,10 +389,10 @@
 					</div>
 				</div>
 
-				<!-- COPIRIGHT <div class="col-md-12 text-center copyright">
+				<div class="col-md-12 text-center copyright">
 					<p><small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
 						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small></p>
-				</div> -->
+				</div>
 
 			</div>
 
