--- a/savory/menu.html
+++ b/savory/menu.html
@@ -103,13 +103,10 @@
 					
 
 					<div class="row row-mt-15em">
-						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-<<<<<<< HEAD
-							<h1 class="cursive-font">Taste all our menu!</h1>	
-=======
+						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">	
 							<!--<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>-->
 							<h1 class="cursive-font">Assapora tutti i nostri piatti!</h1>	
->>>>>>> 4cbeaf5bb9f453336f0bf435a9771bcbcda5fe8a
+
 						</div>
 						
 					</div>
@@ -317,13 +314,10 @@
 			</div>
 		</div>
 	</div>
-<<<<<<< HEAD
 
 	<div class="gtco-section">
-=======
-<!--
-	<div id="gtco-subscribe">
->>>>>>> 12a13a26c7fb68c03fc31e4ec0b95a9cd02cb5a0
+
+
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
@@ -432,12 +426,7 @@
 			</div>
 		</div>
 	</div>
-<<<<<<< HEAD
 
-
-=======
--->
->>>>>>> 12a13a26c7fb68c03fc31e4ec0b95a9cd02cb5a0
 	<footer id="gtco-footer" role="contentinfo" style="background-image: url(images/img_bg_1.jpg)" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="gtco-container">
@@ -463,10 +452,10 @@
 					</div>
 				</div>
 
-				<!-- COPIRIGHT <div class="col-md-12 text-center copyright">
+				<div class="col-md-12 text-center copyright">
 					<p><small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
 						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small></p>
-				</div> -->
+				</div>
 
 			</div>
 
