--- a/savory/services.html
+++ b/savory/services.html
@@ -78,13 +78,8 @@
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
-<<<<<<< HEAD
 						<li><a href="menu.html">Men&ugrave</a></li>
 						<li class="has-dropdown">
-=======
-						<li><a href="menu.html">Menu</a></li>
-						<li class="has-dropdown active">
->>>>>>> 4cbeaf5bb9f453336f0bf435a9771bcbcda5fe8a
 							<a href="services.html">Servizi</a>
 							<ul class="dropdown">
 								<li><a href="attività1.html">Attività1</a></li>
@@ -109,19 +104,8 @@
 
 					<div class="row row-mt-15em">
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-							<!--<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>-->
->>>>>>> 4cbeaf5bb9f453336f0bf435a9771bcbcda5fe8a
-=======
 							<!--<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>-->
 							<h1 class="cursive-font">Nostri Servizi!</h1>	
-=======
-							<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>
->>>>>>> 12a13a26c7fb68c03fc31e4ec0b95a9cd02cb5a0
-							<h1 class="cursive-font">It's our pleasure to serve!</h1>	
->>>>>>> parent of 4cbeaf5... traduzione e aggiungata menu
 						</div>
 						
 					</div>
@@ -214,10 +198,7 @@
 			</div>
 		</div>
 	</div>
-<<<<<<< HEAD
 
-
-=======
 <!--
 	<div id="gtco-subscribe">
 		<div class="gtco-container">
@@ -245,7 +226,7 @@
 		</div>
 	</div>
 -->
->>>>>>> 12a13a26c7fb68c03fc31e4ec0b95a9cd02cb5a0
+
 	<footer id="gtco-footer" role="contentinfo" style="background-image: url(images/img_bg_1.jpg)" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="gtco-container">
@@ -271,10 +252,10 @@
 					</div>
 				</div>
 
-				<!-- COPIRIGHT <div class="col-md-12 text-center copyright">
+				<div class="col-md-12 text-center copyright">
 					<p><small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
 						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small></p>
-				</div> -->
+				</div>
 
 			
 
