--- a/savory/attività2.html
+++ b/savory/attività2.html
@@ -154,10 +154,10 @@
 					</div>
 				</div>
 
-				<!-- COPIRIGHT <div class="col-md-12 text-center copyright">
+				<div class="col-md-12 text-center copyright">
 					<p><small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
 						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small></p>
-				</div> -->
+				</div>
 
 			
 
