--- a/savory/index.html
+++ b/savory/index.html
@@ -6,6 +6,8 @@
 -->
 <html>
 	<head>
+<link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Rock Caff&egrave;!</title>
@@ -278,7 +280,7 @@
 						<span class="icon">
 							<i class="ti-face-smile"></i>
 						</span>
-						<h3>Gente Felica</h3>
+						<h3>Gente Felice</h3>
 						<p></p>
 					</div>
 				</div>
@@ -294,7 +296,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="ti-smoking"></i><!-- inserire icona sigaretta-->
+							<i class="mdi mdi-smoking""></i>
 						</span>
 						<h3>Zona fumatori</h3>
 						<p></p>
