--- a/savory/contact.html
+++ b/savory/contact.html
@@ -82,9 +82,9 @@
 						<li class="has-dropdown">
 							<a href="services.html">Servizi</a>
 							<ul class="dropdown">
-								<li><a href="attività1.html">Attività1</a></li>
-								<li><a href="attività2.html">Attività2</a></li>
-								<li><a href="attività3.html">Attività3</a></li>
+								<li><a href="attività1.html">Eventi</a></li>
+								<li><a href="attività2.html">"Burger Night"</a></li>
+								<li><a href="attività3.html">Musica live</a></li>
 							</ul>
 						</li>
 						<li><a href="contact.html">Contatti</a></li>
@@ -214,7 +214,7 @@
 					<div class="gtco-contact-info">
 						<h3>Informazioni di contatto</h3>
 						<ul>
-							<li class="address">Via Giuseppe Re David, 197 <br> Bari</li>
+							<li class="address"><a href="https://www.google.it/maps/place/Rock+Caff%C3%A8/@41.1080822,16.8751569,17z/data=!3m1!4b1!4m5!3m4!1s0x1347e84e23474d55:0x2d3b3e346f3a68c1!8m2!3d41.1080822!4d16.8773456">Bari, Via Giuseppe Re David, 197</a></li>
 							<li class="phone">080 975 3266</li>
 							<li class="email"><a href="mailto:rockcaffe.bari@gmail.com?subject=Feedback">rockcaffe.bari@gmail.com</a></li>
 							<li class="url"><a href="http://www.facebook.it/RockCaffeBari">ROCK CAFF&Egrave;</a></li>
