--- a/savory/index.html
+++ b/savory/index.html
@@ -82,9 +82,9 @@
 						<li class="has-dropdown">
 							<a href="services.html">Servizi</a>
 							<ul class="dropdown">
-								<li><a href="attività1.html">Attività1</a></li>
-								<li><a href="attività2.html">Attività2</a></li>
-								<li><a href="attività3.html">Attività3</a></li>
+								<li><a href="attività1.html">Eventi</a></li>
+								<li><a href="attività2.html">"Burger Night"</a></li>
+								<li><a href="attività3.html">Musica live</a></li>
 							</ul>
 						</li>
 						<li><a href="contact.html">Contatti</a></li>
@@ -145,9 +145,15 @@
 													</div>
 												</div>
 
+												<script type="text/javascript">
+													function prenota(){
+														location.href = "mailto:rockcaffe.bari@gmail.com?Subject=Prenotazione";
+													}
+												</script>
+
 												<div class="row form-group">
 													<div class="col-md-12">
-														<input type="submit" class="btn btn-primary btn-block" value="Reserve Now">
+														<input type="button" class="btn btn-primary btn-block" value="Prenota!" onclick="prenota()">
 													</div>
 												</div>
 											</form>	
@@ -187,7 +193,7 @@
 						<div class="fh5co-text">
 							<h2>Magic Mushrooms</h2>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$19.15</span></p>
+							<p><span class="price cursive-font">&euro;19.15</span></p>
 						</div>
 					</a>
 				</div>
@@ -200,7 +206,7 @@
 						<div class="fh5co-text">
 							<h2>Cheese and Garlic Toast</h2>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$20.99</span></p>
+							<p><span class="price cursive-font">&euro;20.99</span></p>
 						</div>
 					</a>
 				</div>
@@ -213,7 +219,7 @@
 						<div class="fh5co-text">
 							<h2>Grilled Chiken Salad</h2>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$8.99</span></p>
+							<p><span class="price cursive-font">&euro;8.99</span></p>
 
 						</div>
 					</a>
@@ -229,7 +235,7 @@
 						<div class="fh5co-text">
 							<h2>Organic Egg</h2>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$12.99</span></p>
+							<p><span class="price cursive-font">&euro;12.99</span></p>
 						</div>
 					</a>
 				</div>
@@ -243,7 +249,7 @@
 						<div class="fh5co-text">
 							<h2>Tomato Soup with Chicken</h2>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$23.10</span></p>
+							<p><span class="price cursive-font">&euro;23.10</span></p>
 						</div>
 					</a>
 				</div>
@@ -257,7 +263,7 @@
 						<div class="fh5co-text">
 							<h2>Salad with Crispy Chicken</h2>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$5.59</span></p>
+							<p><span class="price cursive-font">&euro;5.59</span></p>
 						</div>
 					</a>
 				</div>
