--- a/savory/attività1.html
+++ b/savory/attività1.html
@@ -82,9 +82,9 @@
 						<li class="has-dropdown">
 							<a href="services.html">Servizi</a>
 							<ul class="dropdown">
-								<li><a href="attività1.html">Attività1</a></li>
-								<li><a href="attività2.html">Attività2</a></li>
-								<li><a href="attività3.html">Attività3</a></li>
+								<li><a href="attività1.html">Eventi</a></li>
+								<li><a href="attività2.html">"Burger Night"</a></li>
+								<li><a href="attività3.html">Musica live</a></li>
 							</ul>
 						</li>
 						<li><a href="contact.html">Contatti</a></li>
@@ -104,7 +104,7 @@
 
 					<div class="row row-mt-15em">
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-							<h1 class="cursive-font">It's our pleasure to serve!</h1>	
+							<h1 class="cursive-font">Eventi</h1>	
 						</div>
 						
 					</div>
