--- a/savory/services.html
+++ b/savory/services.html
@@ -82,9 +82,9 @@
 						<li class="has-dropdown">
 							<a href="services.html">Servizi</a>
 							<ul class="dropdown">
-								<li><a href="attività1.html">Attività1</a></li>
-								<li><a href="attività2.html">Attività2</a></li>
-								<li><a href="attività3.html">Attività3</a></li>
+								<li><a href="attività1.html">Eventi</a></li>
+								<li><a href="attività2.html">"Burger Night"</a></li>
+								<li><a href="attività3.html">Musica live</a></li>
 							</ul>
 						</li>
 						<li><a href="contact.html">Contatti</a></li>
